ingress-v1-18.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fcdemo-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: fcdemo-service
          servicePort: 80
